Fix statement of Interest overlap issue
#44522

--- a/assets/styles/layouts/profile.scss
+++ b/assets/styles/layouts/profile.scss
@@ -56,6 +56,16 @@
       color: $color-primary;
     }
   }
+  
+  .statement-of-interest {  
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+  }
 }
 
 .usajobs-opop-profile-opportunity__body {
